test/pass/pass_19.prsl
// RUN: %edir/prsl --codegen %s -o pass_19.ll
// RUN: clang++ -Wno-override-module pass_19.ll -o pass_19
// RUN: %S/pass_19 | filecheck %s --match-full-lines
// RUN: %edir/prsl %s | filecheck %s --match-full-lines
// CHECK: 10
// CHECK-NEXT: 9
// CHECK-NEXT: 8
// CHECK-NEXT: 0
// CHECK-NEXT: 0
// CHECK-NEXT: 0

a = 1;
b = 10;
{
    a = 2;
    if (a > 1)
    {
        a = 3;

            while (a > 0)
            {
                a--;
                print b--;
            }
        print a;
    }
    print a;
};

print a;